# the-everything-dictionary

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  restricted.json
public/: ads.txt  loader.js  script.js  style.css
res/: script.js  style.css
src/: main.rs  not_found.rs  routes.rs
src/dict/: mod.rs  restrictor.rs  scrape.rs
templates/: base.html  define.html  guantanamo_bay.html  index.html  not_found.html  subpage.html
