[package]
name = "the-everything-dictionary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12"
dotenv = "0.15"
lazy_static = "1.4"
rand = "0.8"
reqwest = "0.11"
scraper = "0.18"
ego-tree = "0.6"
regex = "1.10"
serde_json = "1.0"

[dependencies.rocket]
version = "0.5.0"
features = ["tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.34"
features = ["macros", "signal", "rt-multi-thread", "sync"]
